extends Control


func _on_button_button_down() -> void:
	print ("Botao pressionados") # Replace with function body.


func _on_button_mouse_entered() -> void:
	print ("AII MAUZIZINHO") # Replace with function body.


func _on_button_2_button_down() -> void:
	print ("configuracoes") # Replace with function body.


func _on_button_3_button_down() -> void:
	print ("SAINDO") # Replace with function body.
